[package]
name = "jcbhmr-go"
version = "1.26.3"
edition = "2024"

[dependencies]
cross-exec = "0.1.2"
fs-err = "3.3.0"
zip = "8.6.0"

[build-dependencies]
build-rs = "0.3.4"
flate2 = "1.1.9"
fs-err = "3.3.0"
fs-walk = "0.2.2"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = "1.0.228"
serde_json = "1.0.150"
tar = "0.4.46"
zip = "8.6.0"
